# test_lists.c

./: .clang-format  CMakeLists.txt  CMakePresets.json
include/: circular_linked_list.h  double_linked_list.h  linked_list.h  node.h  priority_queue.h  queue.h  stack.h
src/: circular_linked_list.c  double_linked_list.c  library.c  linked_list.c  node.c  priority_queue.c  queue.c  stack.c
test/: test_circular_linked_list.c  test_double_linked_list.c  test_linked_list.c  test_priority_queue.c  test_queue.c  test_stack.c
